# kf-cptec-content-factory

./: .env.example  .gitignore  LICENSE  Makefile  README.md  _setup_github.py  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: pipeline.yml
data/category_templates/: crimp.yaml  cutter.yaml  press.yaml
pipeline/: __init__.py
pipeline/cli/: __init__.py  app.py
pipeline/core/: __init__.py  orchestrator.py  state_machine.py
pipeline/modules/: __init__.py  claude.py  deepseek.py  gpt.py  youtube.py
pipeline/output/KF-CPTEC-CRIMP-001/: amazon_listing.json  blog_structure.json  master.json
pipeline/output/KF-CPTEC-CRIMP-002/: blog_structure.json  master.json
pipeline/schemas/: __init__.py  blog_schema.py  seo_schema.py  sku_schema.py  video_schema.py
pipeline/utils/: __init__.py  console.py  http_client.py  logger.py  retry.py  validator.py
tests/: __init__.py  test_imports.py
xhs-reddit-skill/: requirements.txt  skill.py
